clean up openapi macros and naming
