# src/api/dto/mod.rs
@@ -3,5 +3,5 @@ mod story;
 mod task;
 
 pub use page::{PageParams, PageToken};
-pub use story::{Stories, StoryBody};
-pub use task::{CreateTaskBody, PatchTaskBody, TaskParams};
+pub use story::{Stories, StoryRequest};
+pub use task::{CreateTaskRequest, TaskParams, UpdateTaskRequest};
