# src/api/routes/file.rs
@@ -11,11 +11,22 @@ use std::sync::Arc;
 use utoipa::ToSchema;
 use uuid::Uuid;
 
+// Defaults for file uploads
+const FILE: &str = "file.dat";
+const OCTET: &str = "application/octet-stream";
+
+// Just necessary for api docs
+#[derive(ToSchema)]
+struct FileUpload {
+    #[allow(dead_code)]
+    file: Vec<u8>,
+}
+
 /// OpenApi docs for file routes
 #[derive(utoipa::OpenApi)]
 #[openapi(
     paths(get_files, add_files, get_file, download_file, delete_file),
-    components(schemas(AddFile, Errors, StoryFile)),
+    components(schemas(Errors, FileUpload, StoryFile)),
     tags((name = "File"))
 )]
 pub struct ApiDoc;
@@ -29,16 +40,16 @@ pub fn routes() -> Router<Arc<Ctx>> {
         .route("/stories/:story_id/files/:file_id/contents", get(download_file))
 }
 
-/// Get file metadata list for a story.
+/// List files for a story.
 #[utoipa::path(
     get,
     path = "/stories/{story_id}/files",
-    tag = "File",
-    params(("story_id" = Uuid, Path, description = "Story id")),
+    params(("story_id" = Uuid, Path, description = "The parent story id")),
     responses(
-        (status = 200, description = "Array of file metadata", body = [StoryFile]),
-        (status = 404, description = "Story not found", body = Errors)
-    )
+        (status = 200, description = "A file metadata array for the story", body = [StoryFile]),
+        (status = 404, description = "The parent story was not found", body = Errors)
+    ),
+    tag = "File"
 )]
 async fn get_files(
     Path(story_id): Path<Uuid>,
@@ -52,40 +63,29 @@ async fn get_files(
     Ok(Json(files))
 }
 
-// Just necessary for api docs
-#[derive(ToSchema)]
-struct AddFile {
-    #[allow(dead_code)]
-    file: Vec<u8>,
-}
-
-// Defaults for file uploads
-const FILE: &str = "file.dat";
-const OCTET: &str = "application/octet-stream";
-
 /// Add files to a story.
 #[utoipa::path(
     post,
     path = "/stories/{story_id}/files",
-    tag = "File",
-    params(("story_id" = Uuid, Path, description = "Story id")),
+    params(("story_id" = Uuid, Path, description = "The parent story id")),
     request_body(
         content_type = "multipart/form-data",
-        content = AddFile,
+        content = FileUpload,
     ),
     responses(
-        (status = 200, description = "Array of file metadata", body = [StoryFile]),
-        (status = 404, description = "Story not found", body = Errors)
-    )
+        (status = 200, description = "A metadata array for the uploaded files", body = [StoryFile]),
+        (status = 404, description = "The parent story was not found", body = Errors)
+    ),
+    tag = "File"
 )]
 async fn add_files(
     Path(story_id): Path<Uuid>,
     State(ctx): State<Arc<Ctx>>,
-    mut form_data: Multipart,
+    mut multipart: Multipart,
 ) -> Result<impl IntoResponse> {
     let story = ctx.repo.fetch_story(story_id).await?;
     let mut files = Vec::new();
-    while let Some(field) = form_data.next_field().await? {
+    while let Some(field) = multipart.next_field().await? {
         if field.name().unwrap_or_default() == "file" {
             let file_name = field.file_name().unwrap_or(FILE).to_string();
             let content_type = field.content_type().unwrap_or(OCTET).to_string();
@@ -109,15 +109,15 @@ async fn add_files(
 #[utoipa::path(
     get,
     path = "/stories/{story_id}/files/{file_id}/contents",
-    tag = "File",
     params(
-        ("story_id" = Uuid, Path, description = "Story id"),
-        ("file_id" = Uuid, Path, description = "File id")
+        ("story_id" = Uuid, Path, description = "The parent story id"),
+        ("file_id" = Uuid, Path, description = "The id of the file to download")
     ),
     responses(
-        (status = 200, description = "File contents"),
-        (status = 404, description = "File not found", body = Errors)
-    )
+        (status = 200, description = "The contents of the file"),
+        (status = 404, description = "The file was not found", body = Errors)
+    ),
+    tag = "File"
 )]
 async fn download_file(
     Path((story_id, file_id)): Path<(Uuid, Uuid)>,
@@ -137,15 +137,15 @@ async fn download_file(
 #[utoipa::path(
     get,
     path = "/stories/{story_id}/files/{file_id}",
-    tag = "File",
     params(
-        ("story_id" = Uuid, Path, description = "Story id"),
-        ("file_id" = Uuid, Path, description = "File id")
+        ("story_id" = Uuid, Path, description = "The parent story id"),
+        ("file_id" = Uuid, Path, description = "The id of the file metadata")
     ),
     responses(
-        (status = 200, description = "File metadata", body = StoryFile),
-        (status = 404, description = "File not found", body = Errors)
-    )
+        (status = 200, description = "The file metadata", body = StoryFile),
+        (status = 404, description = "The file was not found", body = Errors)
+    ),
+    tag = "File"
 )]
 async fn get_file(
     Path((story_id, file_id)): Path<(Uuid, Uuid)>,
@@ -159,15 +159,15 @@ async fn get_file(
 #[utoipa::path(
     delete,
     path = "/stories/{story_id}/files/{file_id}",
-    tag = "File",
     params(
-        ("story_id" = Uuid, Path, description = "Story id"),
-        ("file_id" = Uuid, Path, description = "File id")
+        ("story_id" = Uuid, Path, description = "The parent story id"),
+        ("file_id" = Uuid, Path, description = "The id of the file to delete")
     ),
     responses(
-        (status = 204, description = "File deleted"),
-        (status = 404, description = "File not found")
-    )
+        (status = 204, description = "The file was deleted successfully"),
+        (status = 404, description = "The file was not found")
+    ),
+    tag = "File"
 )]
 async fn delete_file(
     Path((story_id, file_id)): Path<(Uuid, Uuid)>,
